[gd_scene load_steps=23 format=3 uid="uid://bc3p2wg2lxxy1"]

[ext_resource type="Script" uid="uid://cx6hg5805vnqx" path="res://Audio/music_manager.gd" id="1_1unlh"]
[ext_resource type="AudioStream" uid="uid://fq0vj2ffsvip" path="res://Assets/Audio/Music/Theme_A.ogg" id="2_hef1n"]
[ext_resource type="AudioStream" uid="uid://by207q4xm3tb1" path="res://Assets/Audio/Music/Theme_A0.ogg" id="3_oubgs"]
[ext_resource type="AudioStream" uid="uid://18im0iayo4ld" path="res://Assets/Audio/Music/Theme_A1.ogg" id="4_sxgk8"]
[ext_resource type="AudioStream" uid="uid://b0bi3nxmr6eio" path="res://Assets/Audio/Music/Theme_A2.ogg" id="5_tbrdb"]
[ext_resource type="AudioStream" uid="uid://b8fjqptyairf5" path="res://Assets/Audio/Music/Theme_B.ogg" id="6_3okmj"]
[ext_resource type="AudioStream" uid="uid://ny2d1rgadrhp" path="res://Assets/Audio/Music/Theme_B0.ogg" id="7_dkhsf"]
[ext_resource type="AudioStream" uid="uid://cat0j4bvrk8c2" path="res://Assets/Audio/Music/Theme_B1.ogg" id="8_g6wje"]
[ext_resource type="AudioStream" uid="uid://cb0gfx1u57iry" path="res://Assets/Audio/Music/Theme_B2.ogg" id="9_4b6gb"]
[ext_resource type="AudioStream" uid="uid://cjpsk4de3ijmc" path="res://Assets/Audio/Music/Theme_C.ogg" id="10_86rpc"]
[ext_resource type="AudioStream" uid="uid://wanexflo2ul" path="res://Assets/Audio/Music/Theme_C0.ogg" id="11_twohr"]
[ext_resource type="AudioStream" uid="uid://bv8fasdoqvipo" path="res://Assets/Audio/Music/Theme_C1.ogg" id="12_gm6kx"]
[ext_resource type="AudioStream" uid="uid://nx7h3auo7ghm" path="res://Assets/Audio/Music/Theme_C2.ogg" id="13_48ryt"]
[ext_resource type="AudioStream" uid="uid://fog6i814v43h" path="res://Assets/Audio/Music/Theme_D.ogg" id="14_ol4kf"]
[ext_resource type="AudioStream" uid="uid://cvf718by8k1cv" path="res://Assets/Audio/Music/Theme_D0.ogg" id="15_1vf0r"]
[ext_resource type="AudioStream" uid="uid://cu71w1waagcm4" path="res://Assets/Audio/Music/Theme_D1.ogg" id="16_sgq60"]
[ext_resource type="AudioStream" uid="uid://drqqvxn3g73p3" path="res://Assets/Audio/Music/Theme_D2.ogg" id="17_d85g7"]

[sub_resource type="AudioStreamSynchronized" id="AudioStreamSynchronized_oubgs"]
stream_count = 4
stream_0/stream = ExtResource("2_hef1n")
stream_0/volume = 0.0
stream_1/stream = ExtResource("3_oubgs")
stream_1/volume = -60.0
stream_2/stream = ExtResource("4_sxgk8")
stream_2/volume = -60.0
stream_3/stream = ExtResource("5_tbrdb")
stream_3/volume = -60.0

[sub_resource type="AudioStreamSynchronized" id="AudioStreamSynchronized_86rpc"]
stream_count = 4
stream_0/stream = ExtResource("6_3okmj")
stream_0/volume = 0.0
stream_1/stream = ExtResource("7_dkhsf")
stream_1/volume = -60.0
stream_2/stream = ExtResource("8_g6wje")
stream_2/volume = -60.0
stream_3/stream = ExtResource("9_4b6gb")
stream_3/volume = -60.0

[sub_resource type="AudioStreamSynchronized" id="AudioStreamSynchronized_twohr"]
stream_count = 4
stream_0/stream = ExtResource("10_86rpc")
stream_0/volume = 0.0
stream_1/stream = ExtResource("11_twohr")
stream_1/volume = -60.0
stream_2/stream = ExtResource("12_gm6kx")
stream_2/volume = -60.0
stream_3/stream = ExtResource("13_48ryt")
stream_3/volume = -60.0

[sub_resource type="AudioStreamSynchronized" id="AudioStreamSynchronized_gm6kx"]
stream_count = 4
stream_0/stream = ExtResource("14_ol4kf")
stream_0/volume = 0.0
stream_1/stream = ExtResource("15_1vf0r")
stream_1/volume = -60.0
stream_2/stream = ExtResource("16_sgq60")
stream_2/volume = -60.0
stream_3/stream = ExtResource("17_d85g7")
stream_3/volume = -60.0

[sub_resource type="AudioStreamInteractive" id="AudioStreamInteractive_sxgk8"]
clip_count = 5
clip_0/name = &"theme_a"
clip_0/stream = SubResource("AudioStreamSynchronized_oubgs")
clip_0/auto_advance = 0
clip_1/name = &"theme_b"
clip_1/stream = SubResource("AudioStreamSynchronized_86rpc")
clip_1/auto_advance = 0
clip_2/name = &"theme_c"
clip_2/stream = SubResource("AudioStreamSynchronized_twohr")
clip_2/auto_advance = 0
clip_3/name = &"theme_d"
clip_3/stream = SubResource("AudioStreamSynchronized_gm6kx")
clip_3/auto_advance = 0
clip_4/name = &""
clip_4/auto_advance = 0
_transitions = {
Vector2i(-1, -1): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 2,
"to_time": 1
}
}

[node name="MusicManager" type="Node"]
script = ExtResource("1_1unlh")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamInteractive_sxgk8")
volume_db = -6.0
bus = &"Music"

[node name="DebugLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="DebugLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DebugLayer/Control"]
layout_mode = 0
offset_right = 113.0
offset_bottom = 51.0

[node name="ThemeOptionLabel" type="Label" parent="DebugLayer/Control/VBoxContainer"]
layout_mode = 2
text = "Music Theme Selected:"

[node name="ThemeOptionButton" type="OptionButton" parent="DebugLayer/Control/VBoxContainer"]
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "Theme A"
popup/item_0/id = 0
popup/item_1/text = "Theme B"
popup/item_1/id = 1
popup/item_2/text = "Theme C"
popup/item_2/id = 2
popup/item_3/text = "Theme D"
popup/item_3/id = 3

[node name="DrunknessLabel" type="Label" parent="DebugLayer/Control/VBoxContainer"]
layout_mode = 2
text = "Drunkness: 0.0"

[node name="DrunknessSlider" type="HSlider" parent="DebugLayer/Control/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
